[package]
name = "crane_core"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = { version = "0.34", features = ["std", "serde-serialize", "libm"] }
uom = { version = "0.37", features = ["std", "f64", "serde", "autoconvert"] }
thiserror = "2.0"
toml = "0.9"
csv = "1.4"
tempfile = "3.23"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
approx = "0.5"
